--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /dist
 /tmp
 /out-tsc
+/src/environments
+
 # Only exists if Bazel was run
 /bazel-out
 
@@ -44,6 +46,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-
-# Environment Variables
-/src/environments
+src/environments/environment.ts
